one_product and test checklist

--- a/_posts/2019-03-09-产品测试自查表.md
+++ b/_posts/2019-03-09-产品测试自查表.md
@@ -12,5 +12,9 @@ tags:
     - 自查
     
 ---
+同一个岗位在不同公司、团队中的特点是有所不同的，本人在团队中除了产品设计，还兼任了一部分交互设计和测试的工作的。
+以下也是在做项目期间总结的一些产品人员可以在设计和测试过程中自行检查的一个checklist。因为在实际项目中，会由于各种因素而无法考虑全面，因此在本人所经历的项目基础上，有份checklist，可以帮助自己有意识地避免疏漏。同时，考虑一些细节中不完善之处，若作为产品人员不确定的点，也方便及早的和客户确定好，以减少开发人员在后期的改动。
+有限时间内，凡事无法一次性就做好，因此本份自查表，会结合自己的项目经历进行不断补充。本人也可以在方案设计时、提交给团队内部review或者客户进行评审前对照着这个cheklist进行自查。
+
 ![图片](/img/product-and-test-check.png)
 
